--- a/olca-app/src/org/openlca/app/editors/reports/default_sections.properties
+++ b/olca-app/src/org/openlca/app/editors/reports/default_sections.properties
@@ -25,3 +25,9 @@ PROCESS_CONTRIBUTION_CHART.text = This chart shows the contributions of the \
   selected processes in the project setup to the variant results of the selected \
   LCIA category. As for the single indicator results, you can change the \
   selection and the chart is dynamically updated.
+
+RELATIVE_INDICATOR_BAR_CHART.title = Relative Results
+RELATIVE_INDICATOR_BAR_CHART.text = The following chart shows the relative \
+  indicator results of the respective project variants. For each indicator, the \
+  maximum result is set to 100% and the results of the other variants are \
+  displayed in relation to this result.
