--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -239,6 +239,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython-standalone</artifactId>
+			<version>2.7-b3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-swt</artifactId>
 			<version>10.3</version>
