--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -19,7 +19,7 @@
       		icon="icons/sql_16.png">
       </editor>
       <editor
-      		class="org.openlca.app.devtools.JavaScriptEditor"
+      		class="org.openlca.app.devtools.js.JavaScriptEditor"
       		default="false"
       		id="JavaScriptEditor"
       		name="JavaScript Editor"
