--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -73,7 +73,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar" sourcepath="/olca-ilcd"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar" sourcepath="/olca-io"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar" sourcepath="/olca-simapro-csv"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
