Finalization of SCS changes

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -108,8 +108,8 @@ bin.includes = plugin.xml,\
                libs/gt-graph-10.3.jar,\
                libs/gt-xsd-core-10.3.jar,\
                libs/gt-xsd-kml-10.3.jar,\
-               libs/olca-geo-0.0.1.jar,\
                libs/picocontainer-1.2.jar,\
                libs/xsd-2.6.0.jar,\
                libs/jython-standalone-2.7-b3.jar,\
-               libs/JavaAPIforKml-2.2.0-SNAPSHOT.jar
+               libs/json-simple-1.1.jar,\
+               libs/olca-geo-0.0.2.jar
