--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/json-simple-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7-b3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
@@ -7,11 +8,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/gt-graph-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-0.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar" sourcepath="C:/Users/Besitzer/.m2/repository/com/jolbox/bonecp/0.8.0.RELEASE/bonecp-0.8.0.RELEASE-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bcprov-jdk16-1.46.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
@@ -48,7 +48,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/JavaAPIforKml-2.2.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/javax.persistence-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-1.0.jar"/>
@@ -67,14 +66,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ojalgo-34.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-0.3.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar" sourcepath="/olca-ilcd"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar" sourcepath="/olca-io"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
@@ -96,8 +87,17 @@
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-0.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar" sourcepath="/olca-ilcd"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar" sourcepath="/olca-io"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-0.0.2.jar" sourcepath="/olca-geo"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_05"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
