KmlFeature identifier change to long

--- a/olca-app-html/bower.json
+++ b/olca-app-html/bower.json
@@ -21,6 +21,7 @@
     "d3": "~3.4.11",
     "angulerjs": "~1.2.23",
     "angular-sanitize": "~1.2.23",
-    "codemirror": "~4.5.0"
+    "codemirror": "~4.5.0",
+    "openlayers": "*"
   }
 }
