--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7-b3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/ecore-2.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-graph-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-10.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-0.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/bcprov-jdk16-1.46.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/bonecp-0.8.0.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/common-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.8.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-collections-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-compress-1.4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-httpclient-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-jxpath-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-lang3-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-math3-3.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-pool-1.5.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/derby-10.10.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/dom4j-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.2.jar" sourcepath="C:/Users/Martin Pluta/.m2/repository/com/google/code/gson/gson/2.2.2/gson-2.2.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ecore-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-api-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-coverage-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-cql-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-data-10.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-graph-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-main-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-metadata-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-opengis-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-referencing-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-render-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gt-shapefile-10.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-swt-10.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-core-10.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-xsd-kml-10.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-14.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/httpclient-4.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/httpcore-4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff-1.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities-1.1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-annotations-2.1.4.jar"/>
@@ -53,9 +46,9 @@
 	<classpathentry exported="true" kind="lib" path="libs/jdom-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-2.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-apache-client-1.17.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jersey-apache-client4-1.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-client-1.17.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jersey-core-1.17.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jersey-multipart-1.18.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jgridshift-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-convert-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/joda-time-2.2.jar"/>
@@ -63,28 +56,33 @@
 	<classpathentry exported="true" kind="lib" path="libs/jt-utils-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jts-1.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7-b3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-5.1.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ojalgo-34.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar" sourcepath="/olca-core"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-eigen-0.3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar" sourcepath="/olca-ilcd"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar" sourcepath="/olca-io"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar" sourcepath="/olca-simapro-csv"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-0.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-3.2.0.v201206041011.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.3.1.v201206041142.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/picocontainer-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/stax-api-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/truezip-driver-file-7.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/truezip-driver-zip-7.7.1.jar"/>
@@ -94,6 +92,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/vecmath-1.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xsd-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
