--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,6 +17,7 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
+               db_templates/,\
                libs/bcprov-jdk16-1.46.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
                libs/common-2.6.0.jar,\
@@ -50,6 +51,8 @@ bin.includes = plugin.xml,\
                libs/gt-xsd-core-10.3.jar,\
                libs/gt-xsd-kml-10.3.jar,\
                libs/guava-14.0.1.jar,\
+               libs/httpclient-4.1.1.jar,\
+               libs/httpcore-4.1.jar,\
                libs/imageio-ext-tiff-1.1.7.jar,\
                libs/imageio-ext-utilities-1.1.7.jar,\
                libs/jackson-annotations-2.1.4.jar,\
@@ -63,12 +66,14 @@ bin.includes = plugin.xml,\
                libs/jdom-1.0.jar,\
                libs/jdom-2.0.2.jar,\
                libs/jersey-apache-client-1.17.1.jar,\
+               libs/jersey-apache-client4-1.17.1.jar,\
                libs/jersey-client-1.17.1.jar,\
                libs/jersey-core-1.17.1.jar,\
                libs/jersey-multipart-1.18.2.jar,\
                libs/jgridshift-1.0.jar,\
                libs/joda-convert-1.3.1.jar,\
                libs/joda-time-2.2.jar,\
+               libs/json-simple-1.1.jar,\
                libs/jsr-275-1.0-beta-2.jar,\
                libs/jt-utils-1.3.1.jar,\
                libs/jt-zonalstats-1.3.1.jar,\
@@ -83,7 +88,7 @@ bin.includes = plugin.xml,\
                libs/olca-ecospold-2-1.0.0.jar,\
                libs/olca-eigen-0.3.0.jar,\
                libs/olca-formula-1.0.0.jar,\
-               libs/olca-geo-0.0.1.jar,\
+               libs/olca-geo-0.0.2.jar,\
                libs/olca-ilcd-1.0.0.jar,\
                libs/olca-io-1.0.0.jar,\
                libs/olca-simapro-csv-1.0.0.jar,\
@@ -109,19 +114,5 @@ bin.includes = plugin.xml,\
                libs/vecmath-1.3.2.jar,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
-               libs/zt-zip-1.6.jar,\
-               libs/gt-swt-10.3.jar,\
-               libs/bonecp-0.8.0.RELEASE.jar,\
-               libs/super-csv-2.1.0.jar,\
-               db_templates/,\
-               libs/common-2.6.0.jar,\
-               libs/commons-jxpath-1.3.jar,\
-               libs/ecore-2.6.1.jar,\
-               libs/gt-graph-10.3.jar,\
-               libs/gt-xsd-core-10.3.jar,\
-               libs/gt-xsd-kml-10.3.jar,\
-               libs/picocontainer-1.2.jar,\
                libs/xsd-2.6.0.jar,\
-               libs/jython-standalone-2.7-b3.jar,\
-               libs/json-simple-1.1.jar,\
-               libs/olca-geo-0.0.2.jar
+               libs/zt-zip-1.6.jar
