Fixed class path issues

--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,7 +17,6 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               db_templates/,\
                libs/bcprov-jdk16-1.46.jar,\
                libs/bonecp-0.8.0.RELEASE.jar,\
                libs/common-2.6.0.jar,\
@@ -63,10 +62,8 @@ bin.includes = plugin.xml,\
                libs/jai_imageio-1.1.jar,\
                libs/javax.persistence-2.0.0.jar,\
                libs/jcl-over-slf4j-1.7.2.jar,\
-               libs/jdom-1.0.jar,\
                libs/jdom-2.0.2.jar,\
                libs/jersey-apache-client-1.17.1.jar,\
-               libs/jersey-apache-client4-1.17.1.jar,\
                libs/jersey-client-1.17.1.jar,\
                libs/jersey-core-1.17.1.jar,\
                libs/jersey-multipart-1.18.2.jar,\
@@ -115,4 +112,6 @@ bin.includes = plugin.xml,\
                libs/xml-apis-1.0.b2.jar,\
                libs/xmlbeans-2.3.0.jar,\
                libs/xsd-2.6.0.jar,\
-               libs/zt-zip-1.6.jar
+               libs/zt-zip-1.6.jar,\
+               libs/jdom-1.0.jar,\
+               libs/jersey-apache-client4-1.17.1.jar
